@@ -72,117 +72,104 @@ package TestCase::Literal::String {
   }
   
   sub escape_ascii : int () {
-    my $ch00 = '\x00';
-    my $ch11 = '\x11';
-    my $ch22 = '\x22';
-    my $ch33 = '\x33';
-    my $ch44 = '\x44';
-    my $ch55 = '\x55';
-    my $ch66 = '\x66';
-    my $ch77 = '\x77';
-    my $ch78 = '\x78';
-    my $ch79 = '\x79';
-    my $ch7a = '\x7a';
-    my $ch7b = '\x7b';
-    my $ch7c = '\x7c';
-    my $ch7d = '\x7d';
-    my $ch7e = '\x7e';
-    my $ch7f = '\x7f';
-    my $ch7A = '\x7A';
-    my $ch7B = '\x7B';
-    my $ch7C = '\x7C';
-    my $ch7D = '\x7D';
-    my $ch7E = '\x7E';
-    my $ch7F = '\x7F';
+    my $string = "\x00\x11\x22\x33\x44\x55\x66\x77\x78\x79\x7a\x7b\x7c\x7d\x7e\x7f\x7A\x7B\x7C\x7D\x7E\x7Fa";
     
-    unless ($ch00 == 0) {
+    unless ($string->[0] == 0) {
       return 0;
     }
     
-    unless ($ch11 == 17) {
+    unless ($string->[1] == 17) {
       return 0;
     }
     
-    unless ($ch22 == 34) {
+    unless ($string->[2] == 34) {
       return 0;
     }
     
-    unless ($ch33 == 51) {
+    unless ($string->[3] == 51) {
       return 0;
     }
 
-    unless ($ch44 == 68) {
+    unless ($string->[4] == 68) {
       return 0;
     }
 
-    unless ($ch55 == 85) {
+    unless ($string->[5] == 85) {
       return 0;
     }
     
-    unless ($ch66 == 102) {
+    unless ($string->[6] == 102) {
       return 0;
     }
     
-    unless ($ch77 == 119) {
+    unless ($string->[7] == 119) {
       return 0;
     }
 
-    unless ($ch78 == 120) {
+    unless ($string->[8] == 120) {
       return 0;
     }
 
-    unless ($ch79 == 121) {
+    unless ($string->[9] == 121) {
       return 0;
     }
 
-    unless ($ch7a == 122) {
+    unless ($string->[10] == 122) {
       return 0;
     }
 
-    unless ($ch7b == 123) {
+    unless ($string->[11] == 123) {
       return 0;
     }
 
-    unless ($ch7c == 124) {
+    unless ($string->[12] == 124) {
       return 0;
     }
 
-    unless ($ch7d == 125) {
+    unless ($string->[13] == 125) {
       return 0;
     }
 
-    unless ($ch7e == 126) {
+    unless ($string->[14] == 126) {
       return 0;
     }
 
-    unless ($ch7f == 127) {
+    unless ($string->[15] == 127) {
       return 0;
     }
 
-    unless ($ch7A == 122) {
+    unless ($string->[16] == 122) {
       return 0;
     }
 
-    unless ($ch7B == 123) {
+    unless ($string->[17] == 123) {
       return 0;
     }
 
-    unless ($ch7C == 124) {
+    unless ($string->[18] == 124) {
       return 0;
     }
 
-    unless ($ch7D == 125) {
+    unless ($string->[19] == 125) {
       return 0;
     }
 
-    unless ($ch7E == 126) {
+    unless ($string->[20] == 126) {
       return 0;
     }
 
-    unless ($ch7F == 127) {
+    unless ($string->[21] == 127) {
+      return 0;
+    }
+
+    unless ($string->[22] == 'a') {
       return 0;
     }
     
     return 1;
+  }
+
+  sub escape_unicode : int () {
+    
   }
 }
